[package]
name = "json5_nodes"
version = "0.1.3"
edition = "2021"
description = "Parse JSON5 into nodes that retain both JSON value and input file location"
license = "Unlicense"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
readme = "README.md"
repository = "https://github.com/jlyonsmith/json5-nodes"
categories = ["json5", "json"]
keywords = ["parse", "json", "json5"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
hashlink = "0.7"

[dev-dependencies]
