[package]
name = "json5_nodes"
version = "2.0.2"
edition = "2021"
description = "Parse JSON5 into nodes that retain both JSON value and input file location"
license = "Unlicense"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
readme = "README.md"
repository = "https://github.com/jlyonsmith/json5-nodes"
categories = ["parser-implementations"]
keywords = ["parse", "json", "json5"]

[dependencies]
pest = "2.8.1"
pest_derive = "2.8.1"
hashlink = "0.10.0"

[dev-dependencies]
